# sock2sig-testbench

./: CMakeLists.txt
include/: sock2sig-impl.cc  sock2sig.hh
src/: bytePrinter.cc  testbench.cc
